fixed image blurriness. added util functions to format time-since-post data

--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -94,17 +94,17 @@
     font-size: 14px;
     color: #333; 
 }
-.vote-n-comment button:hover {
+/* .vote-n-comment button:hover {
     background-color: #ff4500;
     border-color: #ff4500;
     color: white;
-}
-.vote-n-comment button:active {
+} */
+/* .vote-n-comment button:active {
     transform: scale(0.98); 
-}
-.vote-n-comment button:focus {
+} */
+/* .vote-n-comment button:focus {
     outline: 2px solid #ff4500; 
-}
+} */
 .up, .down {
     width: 13px; 
     height: 13px;
